--- a/src/pages/posts/index.css
+++ b/src/pages/posts/index.css
@@ -28,13 +28,13 @@
 
 #posts > article{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
     gap: 20px;
     width: 100%;
 }
 
 #posts > form select{
-    width: 90%;
+    width: 50%;
     height: 45px;
     padding-left: 60px;
     outline: none;
@@ -44,8 +44,8 @@
 }
 
 #posts img{
-  height: 400px;
-  width: 100%;
+  height: 300px;
+  width: 300px;
   border: solid 1px #4444;
   border-radius: 10px;
 }
@@ -78,7 +78,7 @@
 #posts article figure figcaption{
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 10px;
   text-align: justify;
   width: 90%;
 }
@@ -103,7 +103,7 @@
 }
 
 
-@media screen and (max-width : 1024px) and (min-width : 720px) {
+@media screen and (max-width : 1024px) and (min-width : 719px) {
 #posts > article{
     grid-template-columns: 1fr 1fr;
     gap: 50px;
@@ -118,7 +118,7 @@
   }
 }
 
-@media screen and (max-width : 800px) {
+@media screen and (max-width : 720px) {
   #posts{
     display: flex;
     flex-direction: column;
@@ -139,7 +139,7 @@
     gap: 50px;
 }
 #posts img{
-  height: 300px;
+  height: 350px;
   width: 100%;
 }
   #posts article figure figcaption{
